# emcppbase-templates

./: .gitignore  .gitmodules  .submodule-mirrors  CMakeLists.txt  README.md  justfile
entrance/: CMakeLists.txt  app.cpp  app2.cpp
src/: .gitignore  Application.cpp  Application.h  CMakeLists.txt  MainGui.cpp  MainGui.h  WatchdogTask.cpp  WatchdogTask.h  main_config.h.in
src/ui/: CMakeLists.txt  HomeForm.cpp  HomeForm.h  MenuForm.h  ui_define.h
src/ui/res/: ui_res.c  ui_res.h
src/ui/u8ui/: U8Ui.cpp  U8Ui.h  U8UiForm.cpp  U8UiForm.h  U8UiLabel.cpp  U8UiLabel.h
